# practiceAndLearning

./: README.md  practiceAndLearning.cabal  stack.yaml
app/: Main.hs  MainMonoid.hs
src/: Gpdf.hs  Lecture.hs  Lib.hs  LinearRegression.hs  OwnMonoid.hs
test/: Spec.hs
