name:                practiceAndLearning
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Levisoto/practiceAndLearning#readme
license:             BSD3
license-file:        LICENSE
author:              Levi Soto
maintainer:          levisoto.337@gmail.com
copyright:           2017 Levi Soto
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Lecture
                       LinearRegression
                       OwnMonoid
  build-depends:       base >= 4.7 && < 5
                     , text
                     , blaze-svg
                     , colour
                     --, Chart
                     --, Chart-cairo
                     --, Chart-diagrams
                     , vector
                     , statistics-linreg
                     , Decimal
                     , easyplot
  default-language:    Haskell2010

executable practiceAndLearning-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , practiceAndLearning
  default-language:    Haskell2010

executable fMon
  hs-source-dirs:      app
  main-is:             MainMonoid.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , practiceAndLearning
  default-language:    Haskell2010

test-suite practiceAndLearning-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , practiceAndLearning
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Levisoto/practiceAndLearning
